; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_models/server/extr_state_transition.c_generic_level_tt_values.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_models/server/extr_state_transition.c_generic_level_tt_values.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_gen_level_srv = type { float, %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { float }
%struct.TYPE_3__ = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @generic_level_tt_values(%struct.bt_mesh_gen_level_srv* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bt_mesh_gen_level_srv*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.bt_mesh_gen_level_srv* %0, %struct.bt_mesh_gen_level_srv** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.bt_mesh_gen_level_srv*, %struct.bt_mesh_gen_level_srv** %4, align 8
  %8 = getelementptr inbounds %struct.bt_mesh_gen_level_srv, %struct.bt_mesh_gen_level_srv* %7, i32 0, i32 1
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @transition_time_values(%struct.TYPE_4__* %8, i32 %9, i32 %10)
  %12 = load %struct.bt_mesh_gen_level_srv*, %struct.bt_mesh_gen_level_srv** %4, align 8
  %13 = getelementptr inbounds %struct.bt_mesh_gen_level_srv, %struct.bt_mesh_gen_level_srv* %12, i32 0, i32 2
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.bt_mesh_gen_level_srv*, %struct.bt_mesh_gen_level_srv** %4, align 8
  %17 = getelementptr inbounds %struct.bt_mesh_gen_level_srv, %struct.bt_mesh_gen_level_srv* %16, i32 0, i32 2
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = sub nsw i64 %15, %19
  %21 = sitofp i64 %20 to float
  %22 = load %struct.bt_mesh_gen_level_srv*, %struct.bt_mesh_gen_level_srv** %4, align 8
  %23 = getelementptr inbounds %struct.bt_mesh_gen_level_srv, %struct.bt_mesh_gen_level_srv* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load float, float* %24, align 4
  %26 = fdiv float %21, %25
  %27 = load %struct.bt_mesh_gen_level_srv*, %struct.bt_mesh_gen_level_srv** %4, align 8
  %28 = getelementptr inbounds %struct.bt_mesh_gen_level_srv, %struct.bt_mesh_gen_level_srv* %27, i32 0, i32 0
  store float %26, float* %28, align 8
  ret void
}

declare dso_local i32 @transition_time_values(%struct.TYPE_4__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
